* suppression de commentaires inutiles sur la page "parlons-web-design.html" * j'ajoute le prefix "cor-" au class CSS que j'ai ajouté pour la correction * COR21 : ajout de la classe CSS "cor-heading" pour régler le problème de contraste au niveau du texte "Prêt pour redonner vie à votre projet...", j'ai également changer la balise (h2 -> p)

--- a/css/style.css
+++ b/css/style.css
@@ -1052,14 +1052,20 @@ q::before, q::after {
 }
 
 /* We need to set a "background-size: contain", because the picture width has been scale down to 1400px */
+p.cor-heading {
+    position: relative;
+	font-size: 22px;
+	color: #eee !important;
+	text-shadow: 0 1px 1px #fff;
+}
 div#bloc-1-hero.bg-banniere {
 	background-size: contain !important;
 }
-div.customer-report > q {
+div.cor-customer-report > q {
 	font-size: 18px;
 	color: #575757;
 }
-div.customer-report > q + p {
+div.cor-customer-report > q + p {
     font-size: 18px;
 }
 h2 > strong {
